Added GitHub links and removed extra code

--- a/email/welcome-email.html
+++ b/email/welcome-email.html
@@ -115,7 +115,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;">
-																<div align="center" style="line-height:10px"><img class="big" src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/833175_817182/top.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
+																<div align="center" style="line-height:10px"><img class="big" src="https://raw.githubusercontent.com/keploy/student-program/main/assets/top.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
 															</td>
 														</tr>
 													</table>
@@ -138,7 +138,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;padding-top:30px;">
-																<div align="center" style="line-height:10px"><img class="big" src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1561/Welcome_Email.png" style="display: block; height: auto; border: 0; width: 420px; max-width: 100%;" width="420" alt="I'm an image" title="I'm an image"></div>
+																<div align="center" style="line-height:10px"><img class="big" src="https://raw.githubusercontent.com/keploy/student-program/main/assets/Welcome_Email.png" style="display: block; height: auto; border: 0; width: 420px; max-width: 100%;" width="420" alt="I'm an image" title="I'm an image"></div>
 															</td>
 														</tr>
 													</table>
@@ -345,7 +345,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;">
-																<div align="center" style="line-height:10px"><img class="big" src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1561/white_down.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
+																<div align="center" style="line-height:10px"><img class="big" src="https://raw.githubusercontent.com/keploy/student-program/main/assets/bottom.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
 															</td>
 														</tr>
 													</table>
@@ -385,7 +385,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;">
-																<div align="center" style="line-height:10px"><img class="big" src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/833175_817182/top.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
+																<div align="center" style="line-height:10px"><img class="big" src="https://raw.githubusercontent.com/keploy/student-program/main/assets/top.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
 															</td>
 														</tr>
 													</table>
@@ -443,7 +443,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;padding-top:5px;">
-																<div align="center" style="line-height:10px"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/833175_817182/banner%20%281%29.png" style="display: block; height: auto; border: 0; width: 298px; max-width: 100%;" width="298" alt="Alternate text" title="Alternate text"></div>
+																<div align="center" style="line-height:10px"><img src="https://raw.githubusercontent.com/keploy/student-program/main/assets/banner.png" style="display: block; height: auto; border: 0; width: 298px; max-width: 100%;" width="298" alt="Alternate text" title="Alternate text"></div>
 															</td>
 														</tr>
 													</table>
@@ -468,10 +468,10 @@
 															<td style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:50px;text-align:center;">
 																<table class="social-table" width="184px" border="0" cellpadding="0" cellspacing="0" role="presentation" align="center" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 																	<tr>
-																		<td style="padding:0 7px 0 7px;"><a href="https://github.com/keploy/keploy" target="_blank"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/833175_817182/github.png" width="32" height="32" alt="GitHub" title="GitHub" style="display: block; height: auto; border: 0;"></a></td>
-																		<td style="padding:0 7px 0 7px;"><a href="https://twitter.com/keployio" target="_blank"><img src="https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/t-outline-circle-dark-gray/twitter@2x.png" width="32" height="32" alt="Twitter" title="Twitter" style="display: block; height: auto; border: 0;"></a></td>
-																		<td style="padding:0 7px 0 7px;"><a href="https://www.linkedin.com/company/keploy" target="_blank"><img src="https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/t-outline-circle-dark-gray/linkedin@2x.png" width="32" height="32" alt="LinkedIn" title="LinkedIn" style="display: block; height: auto; border: 0;"></a></td>
-																		<td style="padding:0 7px 0 7px;"><a href="https://www.youtube.com/channel/UC6OTg7F4o0WkmNtSoob34lg" target="_blank"><img src="https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/t-outline-circle-dark-gray/youtube@2x.png" width="32" height="32" alt="YouTube" title="YouTube" style="display: block; height: auto; border: 0;"></a></td>
+																		<td style="padding:0 7px 0 7px;"><a href="https://github.com/keploy/keploy" target="_blank"><img src="https://raw.githubusercontent.com/keploy/student-program/main/assets/github.png" width="32" height="32" alt="GitHub" title="GitHub" style="display: block; height: auto; border: 0;"></a></td>
+																		<td style="padding:0 7px 0 7px;"><a href="https://twitter.com/keployio" target="_blank"><img src="https://raw.githubusercontent.com/keploy/student-program/main/assets/twitter.png" width="32" height="32" alt="Twitter" title="Twitter" style="display: block; height: auto; border: 0;"></a></td>
+																		<td style="padding:0 7px 0 7px;"><a href="https://www.linkedin.com/company/keploy" target="_blank"><img src="https://raw.githubusercontent.com/keploy/student-program/main/assets/linkedin.png" width="32" height="32" alt="LinkedIn" title="LinkedIn" style="display: block; height: auto; border: 0;"></a></td>
+																		<td style="padding:0 7px 0 7px;"><a href="https://www.youtube.com/channel/UC6OTg7F4o0WkmNtSoob34lg" target="_blank"><img src="https://raw.githubusercontent.com/keploy/student-program/main/assets/youtube.png" width="32" height="32" alt="YouTube" title="YouTube" style="display: block; height: auto; border: 0;"></a></td>
 																	</tr>
 																</table>
 															</td>
@@ -507,7 +507,7 @@
 													<table class="image_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td style="width:100%;padding-right:0px;padding-left:0px;">
-																<div align="center" style="line-height:10px"><img class="big" src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1561/white_down.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
+																<div align="center" style="line-height:10px"><img class="big" src="https://raw.githubusercontent.com/keploy/student-program/main/assets/bottom.png" style="display: block; height: auto; border: 0; width: 700px; max-width: 100%;" width="700" alt="Alternate text" title="Alternate text"></div>
 															</td>
 														</tr>
 													</table>
@@ -528,43 +528,6 @@
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
 													<div class="spacer_block" style="height:25px;line-height:25px;font-size:1px;">&#8202;</div>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-14" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 700px;" width="700">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="icons_block" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td style="vertical-align: middle; color: #9d9d9d; font-family: inherit; font-size: 15px; padding-bottom: 5px; padding-top: 5px; text-align: center;">
-																<table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-																	<tr>
-																		<td style="vertical-align: middle; text-align: center;">
-																			<!--[if vml]><table align="left" cellpadding="0" cellspacing="0" role="presentation" style="display:inline-block;padding-left:0px;padding-right:0px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;"><![endif]-->
-																			<!--[if !vml]><!-->
-																			<table class="icons-inner" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; margin-right: -4px; padding-left: 0px; padding-right: 0px;" cellpadding="0" cellspacing="0" role="presentation">
-																				<!--<![endif]-->
-																				<tr>
-																					<td style="vertical-align: middle; text-align: center; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 6px;"><a href="https://www.designedwithbee.com/?utm_source=editor&utm_medium=bee_pro&utm_campaign=free_footer_link" target="_blank" style="text-decoration: none;"><img class="icon" alt="Designed with BEE" src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/53601_510656/Signature/bee.png" height="32" width="34" align="center" style="display: block; height: auto; margin: 0 auto; border: 0;"></a></td>
-																					<td style="font-family: Montserrat, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif; font-size: 15px; color: #9d9d9d; vertical-align: middle; letter-spacing: undefined; text-align: center;"><a href="https://www.designedwithbee.com/?utm_source=editor&utm_medium=bee_pro&utm_campaign=free_footer_link" target="_blank" style="color: #9d9d9d; text-decoration: none;">Designed with BEE</a></td>
-																				</tr>
-																			</table>
-																		</td>
-																	</tr>
-																</table>
-															</td>
-														</tr>
-													</table>
 												</td>
 											</tr>
 										</tbody>
