--- a/index.html
+++ b/index.html
@@ -399,6 +399,8 @@
 							<li><a href="https://twitter.com/Keployio"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UC6OTg7F4o0WkmNtSoob34lg"><i class="fa fa-youtube"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/keploy/"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://github.com/keploy/student-program"><i class="fa fa-github"></i></a></li>
+							
 						</ul>
 					</aside>
 				</div>
