fixed the errors from button and gave a background hex
Signed-off-by: Jyotirmoy Roy <jyotirmoyroy649@gmail.com>

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h4>Get into the world of APIs and API Testing with Keploy and help others grow with APIs</h4>
 
                 <div class="home-content__buttons">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2i-oQ8fKZ3IMg0mxpbYoQXLMOp4f0Fn2LmetwJ3_f2gncfw/viewform" class="smoothscroll btn btn--stroke">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2i-oQ8fKZ3IMg0mxpbYoQXLMOp4f0Fn2LmetwJ3_f2gncfw/viewform" class="btn btn--stroke">
                         Get Started
                     </a>
                     <!-- <a href="#about" class="smoothscroll btn btn--stroke">
