chore: adding canonical url
Signed-off-by: Neha Gupta <gneha21@yahoo.in>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-
+    <link rel="canonical" href="https://fellowship.keploy.io/" />
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
