fix: url of broken images
Signed-off-by: Diganta Kr Banik <digantabanik2000@gmail.com>

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="div1 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="https://media.licdn.com/dms/image/C4D03AQHyVsZqRPwc-w/profile-displayphoto-shrink_200_200/0/1661749934721?e=1683158400&v=beta&t=MCMXVUXpC3KzB_XhMMiUvO6R229-nNPyTyQOyRG2Chc" alt="">
+                  <img src="./images/testimonials/sanskriti.avif" alt="">
                 </div>
                 <div class="detbox">
                   <p class="name">Sanskriti Gupta</p>
@@ -258,7 +258,7 @@
             <div class="div2 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="https://media.licdn.com/dms/image/D4D03AQHOWoQKa6IFBQ/profile-displayphoto-shrink_200_200/0/1671693704759?e=1683158400&v=beta&t=-8iQO_Dg_K-5jjUeIOaC1ZjUwp_2_Jp-xKGVxR7HPO4" alt="">
+                  <img src="./images/testimonials/sukriti.avif" alt="">
                 </div>
                 <div class="detbox">
                   <p class="name">Sukriti Maurya</p>
@@ -274,7 +274,7 @@
             <div class="div3 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="https://pbs.twimg.com/profile_images/1594357866986889216/cyNNLuLG_400x400.jpg" alt="">
+                  <img src="./images/testimonials/neel.jpg" alt="">
                 </div>
                 <div class="detbox">
                   <p class="name">Neel Shah</p>
@@ -297,7 +297,7 @@
             <div class="div4 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="https://media.licdn.com/dms/image/D4D03AQGLWzH2ePckvA/profile-displayphoto-shrink_800_800/0/1671709346743?e=1683158400&v=beta&t=jDKqSmAooXmM09WY_QZygGQt1dy1YHvDFONFgHbcNQM" alt="">
+                  <img src="./images/testimonials/harsh.avif" alt="">
                 </div>
                 <div class="detbox">
                   <p class="name">Harsh Rastogi</p>
@@ -315,7 +315,7 @@
             <div class="div5 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="https://media.licdn.com/dms/image/C5603AQEQUF3hKno4KQ/profile-displayphoto-shrink_200_200/0/1649527843440?e=1683158400&v=beta&t=JnVDSJnyzOU3EeYJNxvJrqtZ65NqweZ4MSvFwWW7QHE" alt="">
+                  <img src="./images/testimonials/arunima.avif" alt="">
                 </div>
                 <div class="detbox">
                   <p class="name">Arunima Chaudhuri </p>
