fix: metadata description duplication corrected
Signed-off-by: Animesh Pathak <sonichigi@Animeshs-MacBook-Air.local>

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Keploy - Open source e2e testing toolkit for developers</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Keploy Fellowship Program">
+    <meta name="author" content="keploy.io">
 
     <!-- mobile specific metas
     ================================================== -->
