--- a/styles.html
+++ b/styles.html
@@ -11,8 +11,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Glint - Style Guide</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Keploy Fellowship Program">
+    <meta name="author" content="Keploy.io">
 
     <!-- mobile specific metas
     ================================================== -->
