feat: minor fixes for the new fellowhship form and links
Signed-off-by: Amaan Bhati <94218318+amaan-bhati@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="https://join.slack.com/t/keploy/shared_invite/zt-12rfbvc01-o54cOG0X1G6eVJTuI_orSA"><i class="fa fa-slack"></i></a>
+                        <a href="https://join.slack.com/t/keploy/shared_invite/zt-2poflru6f-_VAuvQfCBT8fDWv1WwSbkw"><i class="fa fa-slack"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com/Keployio"><i class="fa fa-twitter"></i></a>
@@ -113,10 +113,10 @@
                 <h1>
                     Keploy API Fellowship
                 </h1>
-                <h4>Get into the world of APIs and API Testing with Keploy and help others grow with APIs</h4>
+                <h4>Designed to help you master open-source contributions, Git, GitHub, API development, Google Summer of Code (GSoC), how to make and integrate apps with APIs, and how to test them. This program is your gateway to excelling in the world of APIs and software engineering.</h4>
 
                 <div class="home-content__buttons">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2i-oQ8fKZ3IMg0mxpbYoQXLMOp4f0Fn2LmetwJ3_f2gncfw/viewform" class="btn btn--stroke">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5132o6GBa1PLZOVRK3ZxEwUE8DGJivguHoREwOprg0AMDzg/viewform" class="btn btn--stroke">
                         Get Started
                     </a>
                     <!-- <a href="#about" class="smoothscroll btn btn--stroke">
@@ -139,7 +139,7 @@
 
         <ul class="home-social">
             <li>
-                <a href="https://join.slack.com/t/keploy/shared_invite/zt-12rfbvc01-o54cOG0X1G6eVJTuI_orSA"><i class="fa fa-slack" aria-hidden="true"></i><span>Slack</span></a>
+                <a href="https://join.slack.com/t/keploy/shared_invite/zt-2poflru6f-_VAuvQfCBT8fDWv1WwSbkw"><i class="fa fa-slack" aria-hidden="true"></i><span>Slack</span></a>
             </li>
             <li>
                 <a href="https://twitter.com/Keployio"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span></a>
@@ -222,7 +222,7 @@
 
         <div class="row clients-outer" data-aos="fade-up">
                     
-                    <a href="https://join.slack.com/t/keploy/shared_invite/zt-12rfbvc01-o54cOG0X1G6eVJTuI_orSA">                
+                    <a href="https://join.slack.com/t/keploy/shared_invite/zt-2poflru6f-_VAuvQfCBT8fDWv1WwSbkw">                
 
                     <button class="butn--primary">Join Slack</button>
                 </a>
@@ -365,9 +365,12 @@
 				<div class="col-lg-5 col-sm-6">
 					<aside class="f_widget ab_widget">
 						<div class="f_title">
-							<h3>Copyright © 2023  Keploy Inc.</h3>
+							<h3>Copyright © 2024  Keploy Inc.</h3>
 						</div>
-						<p>Developers experience for e2e testing. Toolkit that creates test-cases and data mocks from API calls, DB queries, etc.</p>
+						<p>Developer-centric API testing tool designed to simplify and accelerate the testing process. By creating tests with built-in mocks, Keploy offers a faster alternative to traditional unit testing - and it keeps getting faster every day! </p>
+<!--is a **developer-centric** API testing tool designed to simplify and accelerate the testing process. By creating **tests with built-in mocks**, Keploy offers a faster alternative to traditional unit testing - and it keeps getting faster every day!  -->
+
+
 					</aside>
 				</div>
 				<div class="col-lg-5 col-sm-6">
@@ -395,7 +398,7 @@
 						</div>
 						<p>Let us be social</p>
 						<ul class="list">
-							<li><a href="https://keploy.slack.com/"><i class="fa fa-slack"></i></a></li>
+							<li><a href="https://join.slack.com/t/keploy/shared_invite/zt-2poflru6f-_VAuvQfCBT8fDWv1WwSbkw"><i class="fa fa-slack"></i></a></li>
 							<li><a href="https://twitter.com/Keployio"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="https://www.youtube.com/channel/UC6OTg7F4o0WkmNtSoob34lg"><i class="fa fa-youtube"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/keploy/"><i class="fa fa-linkedin"></i></a></li>
