feat: made necessary optimizations Signed-off-by: Ayushman Singh <ayushmans012@gmail.com>

--- a/styles.html
+++ b/styles.html
@@ -13,6 +13,8 @@
     <title>Glint - Style Guide</title>
     <meta name="description" content="Keploy Fellowship Program">
     <meta name="author" content="Keploy.io">
+    <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
+     
 
     <!-- mobile specific metas
     ================================================== -->
