changed the newsletter present in the footer of Student-Program to a button which helps redirect to Keploy's Docs page

--- a/index.html
+++ b/index.html
@@ -371,23 +371,14 @@
 					</aside>
 				</div>
 				<div class="col-lg-5 col-sm-6">
-					<aside class="f_widget news_widget">
-						<div class="f_title">
-							<h3>Newsletter</h3>
-						</div>
-						<p>Stay updated with our latest trends</p>
-						<div id="mc_embed_signup-impress">
-							<form id="newsletter-1" target="" action="" method="post" class="subscribe_form relative">
-								<div class="input-group d-flex flex-row justify-content-center">
-									<input name="email" class="input" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-									<button class="btn sub-btn submit-btn"><span class="lnr lnr-arrow-right"></span></button>
-								</div>
-								<div class="mt-10 info"></div>
-							</form>
-							<div class="alert alert-warning alert-msg text-hide" role="alert"></div>
-						</div>
-					</aside>
-				</div>
+                    <aside class="f_widget docs_widget text-center">
+                       <div class="f_title">
+                           <h3>Documentation</h3>
+                       </div>
+                       <p>Visit the Keploy Docs website for more info</p>
+                       <a href="https://keploy.io/docs/" target="_blank" class="keploy-docs-btn">Go to Docs</a>
+                    </aside>
+                </div>
 				<div class="col-lg-2">
 					<aside class="f_widget social_widget">
 						<div class="f_title">
