Add Aritra Ghosh to Keploy Student Program contributors

--- a/index.html
+++ b/index.html
@@ -326,6 +326,24 @@
                 <a href="https://arunima.hashnode.dev/my-keploy-api-fellowship-experience"><h4>I got to know about this opportunity from LinkedIn. It has been a wonderful journey of learning about APIs so far. I am thankful to all my mentors for sharing their knowledge and insights with us during this program. 🤩</h4></a>
               </div>
             </div>
+            <!-- div6 -->
+<div class="div6 eachdiv">
+  <div class="userdetails">
+    <div class="imgbox">
+      <img src="./images/testimonials/aritra.jpg" alt="Aritra Ghosh">
+    </div>
+    <div class="detbox">
+      <p class="name">Aritra Ghosh</p>
+      <p class="designation">FullStack-Developer | Final Year | KIIT University</p>
+    </div>
+  </div>
+  <div class="review">
+    <a href="https://github.com/aritraghosh7">
+      <h4>Keploy API Fellowship is a transformative experience. It helped me explore open source deeply, and grow as a contributor and learner.</h4>
+    </a>
+  </div>
+</div>
+
           </div>
         </div>
 
