Added Scroll Up button at the bottom of the homepage
Signed-off-by: nageshkharat <kharatnagesh049@gmail.com>

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             </div>
 
-            <div class="home-content__scroll">
+            <div class="home-content__scroll_down">
                 <a href="#about" class="scroll-link smoothscroll">
                     <span>Scroll Down</span>
                 </a>
@@ -406,6 +406,11 @@
 				</div>
 			</div>
 		</div>
+        <div class="home-content__scroll_up">
+            <a href="#home" class="scroll-link smoothscroll" title="Scroll to Top">
+                <span>Scroll Up</span>
+            </a>
+        </div>
 	</footer>
 	<!--================End Footer Area =================-->
 
