Add Riya Malhotra to Keploy Student Program Contributors

--- a/index.html
+++ b/index.html
@@ -333,13 +333,17 @@
                   <img src="./images/testimonials/riya.jpg" alt="Riya Malhotra">
                 </div>
                 <div class="detbox">
-                  <p class="name">Riya Malhotra </p>
-                  <p class="designation">FullStack-Developer | Final year | KIIT University</p>
+                  <p class="name">Riya Malhotra</p>
+                  <p class="designation">Final year B.Tech student at KIIT</p>
                 </div>
               </div>
               <div class="review">
-                <a href="https://github.com/riya1421"><h4>Keploy API Fellowship Program is a transformative experience . It is helping me to enhance my practical skills in API development,debugging and collaborative coding through real-world projects. &hearts;</h4></a>
+                <a href="https://github.com/riya1421">
+                    <h4> Keploy API Fellowship program is a transformative experience. The program enhanced my practical skills in API development, debugging, and collaborative coding through real-world projects. &hearts;</h4>
+                </a>
+
               </div>
+            </div>
             </div>
           </div>
         </div>
