Updated the index.html , add the new testimonial card , and uploaded the required image and it's css

--- a/index.html
+++ b/index.html
@@ -326,6 +326,27 @@
                 <a href="https://arunima.hashnode.dev/my-keploy-api-fellowship-experience"><h4>I got to know about this opportunity from LinkedIn. It has been a wonderful journey of learning about APIs so far. I am thankful to all my mentors for sharing their knowledge and insights with us during this program. 🤩</h4></a>
               </div>
             </div>
+
+             <!-- div 6 -->
+        <div class="div6 eachdiv">
+            <div class="userdetails">
+              <div class="imgbox">
+                <img src="./images/testimonials/shravan.avif" alt="">
+              </div>
+              <div class="detbox">
+                <p class="name">Shravan Yadav</p>
+                <p class="designation">Web Development || Final Year || KIIT UNIVERSITY</p>
+                <p class="designation">GitHub : <a href="https://github.com/Shravan9393"><u>https://github.com/Shravan9393</u></a></p>
+              </div>
+            </div>
+            <div class="review">
+              <a href="#">
+                  <h4>From Keploy api fellowship program, my way of learning did take a new turn, as I got into expolring the open-source , reading the documents, and applying them to my projects.✨✨</h4>
+              </a>
+            </div>
+          </div>
+
+          
           </div>
         </div>
 
