added scroll down buttons after each section for consistency

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
                     <p>Perks: 🌟 Mentorship on how to build and grow a community</p>
                 </div>
             </div>
+            <div class="home-content__scroll">
+                <a href="#join" class="scroll-link smoothscroll">
+                    <span>Scroll Down</span>
+                </a>
+            </div>
 
         </div> <!-- end services-list -->
 
@@ -227,6 +232,7 @@
                     <button class="butn--primary">Join Slack</button>
                 </a>
         </div> <!-- end clients-outer -->
+        
 
         <!-- end client-testimonials -->
 
