added alt attributes, and meta keywords

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Keploy - Open source e2e testing toolkit for developers</title>
     <meta name="description" content="Keploy Fellowship Program">
     <meta name="author" content="keploy.io">
+    <meta name="keywords" content="Keploy, API, Fellowship, Open Source, Testing, Community, Developer">
+    <meta name="robots" content="index, follow">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -46,7 +48,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.png" alt="Homepage">
+                <img src="images/logo.png" alt="Keploy Homepage Logo">
             </a>
         </div>
 
@@ -173,7 +175,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <img class="icon" src="./images/code1.gif"></img>
+                    <img class="icon" src="./images/code1.gif" alt="Code Example 1"></img>
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Learn</h3>
@@ -184,7 +186,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <img class="icon" src="./images/code2.gif"></img>
+                    <img class="icon" src="./images/code2.gif" alt="Code Example 2"></img>
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Teach</h3>
@@ -195,7 +197,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <img class="icon" src="./images/code3.gif"></img>
+                    <img class="icon" src="./images/code3.gif" alt="Code Example 3"></img>
                 </div>  
                 <div class="service-text">
                     <h3 class="h2">Grow</h3>
@@ -239,7 +241,7 @@
             <div class="div1 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="./images/testimonials/sanskriti.avif" alt="">
+                  <img src="./images/testimonials/sanskriti.avif" alt="Sanskriti Gupta testimonial photo">
                 </div>
                 <div class="detbox">
                   <p class="name">Sanskriti Gupta</p>
@@ -258,7 +260,7 @@
             <div class="div2 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="./images/testimonials/sukriti.avif" alt="">
+                  <img src="./images/testimonials/sukriti.avif" alt="Sukriti Maurya testimonial photo">
                 </div>
                 <div class="detbox">
                   <p class="name">Sukriti Maurya</p>
@@ -274,7 +276,7 @@
             <div class="div3 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="./images/testimonials/neel.jpg" alt="">
+                  <img src="./images/testimonials/neel.jpg" alt="Neel Shah testimonial photo">
                 </div>
                 <div class="detbox">
                   <p class="name">Neel Shah</p>
@@ -297,7 +299,7 @@
             <div class="div4 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="./images/testimonials/harsh.avif" alt="">
+                  <img src="./images/testimonials/harsh.avif" alt="Harsh Rastogi testimonial photo">
                 </div>
                 <div class="detbox">
                   <p class="name">Harsh Rastogi</p>
@@ -315,7 +317,7 @@
             <div class="div5 eachdiv">
               <div class="userdetails">
                 <div class="imgbox">
-                  <img src="./images/testimonials/arunima.avif" alt="">
+                  <img src="./images/testimonials/arunima.avif" alt="Arunima Chaudhuri testimonial photo">
                 </div>
                 <div class="detbox">
                   <p class="name">Arunima Chaudhuri </p>
@@ -367,7 +369,8 @@
 						<div class="f_title">
 							<h3>Copyright © 2024  Keploy Inc.</h3>
 						</div>
-						<p>Developer-centric API testing tool designed to simplify and accelerate the testing process. By creating tests with built-in mocks, Keploy offers a faster alternative to traditional unit testing - and it keeps getting faster every day! </p>
+						<p>Developer-centric API testing tool designed to simplify and accelerate the testing process. By creating tests with built-in mocks, Keploy offers a faster alternative to traditional unit testing - and it keeps getting faster every day!</p>
+						<p><a href="mailto:contact@keploy.io">Contact Us</a></p>
 					</aside>
 				</div>
 				<div class="col-lg-5 col-sm-6">
