--- a/index.html
+++ b/index.html
@@ -471,6 +471,8 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
+<!-- BUTTON for Scroll-To-Top -->
+
   <!-- Scroll to top(STT) button -->
   <button onclick="topFunction()" id="scrollTopBtn" title="Go to top">⬆</button>
 
@@ -510,7 +512,7 @@
       }
     };
 
-    // When STT button clicked, scroll to top
+    // When STT button clicked it Scrolls to Top
     function topFunction() {
       document.body.scrollTop = 0; // Safari
       document.documentElement.scrollTop = 0;
