--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
 
-    <!--- basic page needs
+    <!--- Basic page needs
     ================================================== -->
     <meta charset="utf-8">
     <title>Keploy - Open source e2e testing toolkit for developers</title>
@@ -30,7 +30,7 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- favicons
+    <!-- Favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -471,7 +471,7 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
-<!-- BUTTON for Scroll-To-Top -->
+<!-- Button for Scroll-To-Top -->
 
   <!-- Scroll to top(STT) button -->
   <button onclick="topFunction()" id="scrollTopBtn" title="Go to top">⬆</button>
